--- a/Articles/VECM/Petrini_VECM_2021.org
+++ b/Articles/VECM/Petrini_VECM_2021.org
@@ -67,8 +67,8 @@ also find that long-run causality goes unidirectionally from houses’ own inter
 as expected. In summary, our findings support the relevance of houses’ own interest rate in determining residential investment
 while the other way round does not occur.
 	
-#+LATEX: \noindent \textbf{Keywords:} Residential Investment; Asset price inflation; Mortgage Interest rate; Vector-Error correction model
-#+LATEX: \noindent \textbf{JEL cods:} E39; E44; R39
+#+LATEX: \noindent \textbf{Keywords:} Residential Investment; Asset price inflation; Mortgage Interest rate; Vector-Error correction model\\
+#+LATEX: \noindent \textbf{JEL codes:} E39; E44; R39
 #+END_abstract
 
 
