--- a/Articles/VECM/Petrini_VECM_2021.tex
+++ b/Articles/VECM/Petrini_VECM_2021.tex
@@ -1,4 +1,4 @@
-% Created 2021-03-10 qua 18:12
+% Created 2021-03-15 seg 16:51
 % Intended LaTeX compiler: pdflatex
 \documentclass[12pt, a4paper]{article}
 \usepackage[utf8]{inputenc}
@@ -59,13 +59,13 @@ also find that long-run causality goes unidirectionally from houses’ own inter
 as expected. In summary, our findings support the relevance of houses’ own interest rate in determining residential investment
 while the other way round does not occur.
 
-\noindent \textbf{Keywords:} Residential Investment; Asset price inflation; Mortgage Interest rate; Vector-Error correction model
-\noindent \textbf{JEL cods:} E39; E44; R39
+\noindent \textbf{Keywords:} Residential Investment; Asset price inflation; Mortgage Interest rate; Vector-Error correction model\\
+\noindent \textbf{JEL codes:} E39; E44; R39
 \end{abstract}
 
 
 \section{Introduction}
-\label{sec:org524c5e2}
+\label{sec:org7d085e9}
 \label{sec:Introduction}
 Among aggregate demand expenditures, non-residential investment is the most examined  one between (at least) heterodox macroeconomists.
 As a consequence, the relevance of others (autonomous) expenditures on macroeconomic dynamics has been underestimated \cite{brochier_macroeconomics_2017}.
@@ -83,7 +83,7 @@ The results for all statistical tests are provided in Appendix \ref{appen:A}.
 
 
 \section{Residential investment, economic growth and business cycle in the US economy}
-\label{sec:org3770e2f}
+\label{sec:orgf66dc6d}
 \label{sec:Stylized_Facts}
 Before the subprime crisis and the subsequent Great Recession (2008-9), economists usually did not pay due attention to the role of residential investment to macroeconomic dynamics.
 Perhaps, this lack of attention can be explained by the small share of residential investment on aggregate demand (see figure \ref{fig:share}).
@@ -105,9 +105,9 @@ In this sense, he builds a model dedicated for the latter type of investment, em
 	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' Elaboration}
 \end{figure}
 
-Recently, more and more macroeconomists are paying attention to the relevance of residential investment for the business cycles.
+Recently, more and more economists are paying attention to the relevance of residential investment for the business cycles.
 \textcite{green_follow_1997} analyzed this connection even before the Great Recession.
-Based on Granger casualty tests for the US from 1952 to 1992, he concludes that residential investment leads the cycle, while non-residential investment (i.e., firms business investment) lags the cycle.
+Based on Granger causality tests for the US from 1952 to 1992, he concludes that residential investment leads the cycle, while non-residential investment (i.e., firms business investment) lags the cycle.
 \textcite{green_follow_1997} relates this result to the forward-looking behavior of households.
 Thus, he restricts the relevance of residential investment as a temporal precedence indicator.
 
@@ -132,10 +132,10 @@ The Great Recession is a remarkable example of this pattern while dot-com crisis
 
 \begin{figure}[H]
 	\centering
-	\caption{Selected expecditure growth rates 2 years before and after recession start}
+	\caption{Selected expecditure growth rates 2 years before and after recession start\\Dashed lines indicates recession start}
 	\label{fig:cycle}
 	\includegraphics[width=\textwidth]{./figs/Centered_Begin_pct1.png}
-	\caption*{\textbf{Source:} Authors' Elaboration}
+	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' Elaboration}
 \end{figure}
 
 
@@ -161,44 +161,46 @@ Other studies have shown that real estate inflation is the main determinant of h
 In summary, what we intended to show was the macroeconomic relevance of residential investment.
 On the following section, we analyze how econometric literature has dealt with determinants of the latter.
 \section{Determinants of residential investment: review of empirical literature}
-\label{sec:orge13e10e}
+\label{sec:org0aebb51}
 \label{sec:empirical_review}
-As we have seen in the previous session, there has been a growing attention to the macroeconomic implications of residential investment. It is worth noting, there is a vast empirical literature on housing. However, this literature is mainly focused on urban and regional economics or microeconomic issues. As a consequence, few econometric papers analyze housing in macroeconomic terms. Additionally, if housing macroeconomic literature is scarce, even fewer scholars examine residential investment and its determinants specifically. In this sense, we review papers that analyse the determinants of residential investment (or some proxy) focusing on the US case, as well on some panel analysis of multiple countries.
+As we have seen in the previous session, there has been a growing attention to the macroeconomic implications of residential investment. It is worth noting, there is a vast empirical literature on housing. However, this literature is mainly focused on urban and regional economics or microeconomic issues. As a consequence, few econometric papers analyze housing in macroeconomic terms. Additionally, if housing macroeconomic literature is scarce, even fewer scholars examine residential investment and its determinants specifically. In this section, we review papers that analyse the determinants of residential investment (or some proxy) focusing on the US case, as well on some panel analysis of multiple countries.
 
 In this sense, \citeauthor*{poterba_tax_1984}'s \citeyear{poterba_tax_1984} contribution stands out once it considers houses as an asset and not only as a durable consumption good.
 Based on asset-market model for the construction sector, he estimates a residential investment supply function for the US from 1974 to 1982.
 In order to estimate the determinants of residential investment, he includes real house prices, a non-residential constructor deflator index, wages of the housing sector and alternates between two measures  of  credit  rationing.
-In summary, real house prices is the main driver of constructors behavior.
 Therefore, \textcite{poterba_tax_1984} concludes that residential investment is positively induced house prices.
-\textcite{topel_1988_Housing} estimate the determinants of housing starts (as a proxy for residential investment) for the US from 1963 to 183.
+
+\textcite{topel_1988_Housing} come to a similar conclusion to \textcite{poterba_tax_1984}.
+Based on instrumental variables, they estimate the determinants of housing starts (as a proxy for residential investment) for the US from 1963 to 183.
 Their functional form for residential investment includes hedonic prices and some cost shifters for the construction sector such as interest rate, expected inflation, wages and median market time since the construction begins.
-Similar to \textcite{poterba_tax_1984}, they conclude that residential investment is highly sensible to house prices movements while interest rate is a relevant cost shifter.
+In summary, they found that residential investment is highly sensible to house prices movements while interest rate is a relevant cost shifter.
 
 Recently,  \textcite{arestis_residential_2015} update \citeauthor*{poterba_tax_1984}'s \citeyear{poterba_tax_1984} framework by estimating an autoregressive distributed lag (ARDL) model for 17 OECD countries.
 In their model, they specify residential investment as a positive function of house prices, real disposable income and bank credit while mortgage interest and unemployment rate are expected to have negative effects.
 They report that disposable income is the major determinant of residential investment for most OECD countries while banking credit and house prices are more relevant for the US.
 
-Some scholars estimated residential investment based on a Tobin's Q adapted for the housing sector\footnote{This adapted Tobin's Q is defined as the ratio between the market price of new houses and construction cost to build a new one.}.
-\textcite{barot_2002_House}, for instance, investigate the differences and similarities for the Sweden and UK housing market based on a Stock-flow framework from 1970 to 1998.
-Their residential investment functional form includes both adapted Tobin's Q and real interest rate.
+Some scholars estimated residential investment based on a Tobin's Q for residential investment\footnote{This adapted Tobin's Q is defined as the ratio between the market price of new houses and construction cost to build a new one.}.
+\textcite{barot_2002_House}, for instance, investigate the differences and similarities for the Sweden and UK housing market based on a stock-flow framework from 1970 to 1998.
+Their residential investment functional form includes both Tobin's Q for residential investment and real interest rate.
 They report some opposite results regarding Granger causality tests for house prices, financial wealth, household debt and interest rate.
-The only result that is equally valid for both Swedwn and UK is that housing Tobin's Q granger causes housing investment.
-More recently, \textcite{kohlscheen_2018_Residential}, also estimate residential investment as a function of housing Tobin's Q with an unbalanced panel data for 15 OECD countries from 1970 ownwards\footnote{More precisely, \textcite{kohlscheen_2018_Residential} include Tobin's Q numerator and denominator as separate variables.}.
-Beyond Tobin's Q they also include real house prices, GDP level, population density, net migration rates and house stock share on GDP.
+The only result that is equally valid for both Sweden and UK is that Tobin's Q for residential investment  granger causes housing investment.
+More recently, \textcite{kohlscheen_2018_Residential}, also estimate residential investment as a function of this particular Tobin's Q with an unbalanced panel data for 15 OECD countries from 1970 ownwards\footnote{More precisely, \textcite{kohlscheen_2018_Residential} include Tobin's Q for residential investment numerator and denominator as separate variables.}.
+Beyond this adapted Tobin's Q they also include real house prices, GDP level, population density, net migration rates and house stock share on GDP.
 In summary, they conclude that real house prices growth, nominal interest rate, net migration rates and existing house stock are the main determinants of residential investment.
 
-Other common ground in macroeconomic housing is the relevance of interest rate for residential investment.
-In a OLS model for 7 OECD, \textcite{egebo_1990_MODEL} concludes that real disposable income and real interest rate are relevant for residential investment.
-For the US in particular, they report that mortgage interest rate coefficients are quite robust.
-\textcite{mccarthyMonetaryPolicyTransmission2002}, for instance, evaluate the response of housing market to a monetary policy shock.
-In order to isolate some institutional change effects, they estimate a GMM model for the US in two sub-samples (1975-1985 and 1986-2000).
-They conclude that the magnitude of the response to shock is similar to before the institutional break of mid-1980s.
+Other common ground in the housing literature is the relevance of interest rate for residential investment.
+In a OLS model for 7 OECD countries, \textcite{egebo_1990_MODEL} concludes that real disposable income and interest rate deflated by consumer price index are relevant for residential investment.
+For the US in particular, they report that mortgage interest rate coefficients are robust.
+Some scholars have reported that the residential investment sensitivity to interest rate are still valid after institutional changes of mid-1980s\footnote{Just to name some of them: Depository Institutions Deregulation and Monetary Control Act (1980); Financial Institutions Reform, Recovery, and Enforcement Act (FIRREA, 1989). For a detailed chronology, see  \textcite[Appendix B]{mccarthyMonetaryPolicyTransmission2002} and \textcite{green_american_2005}.}.
+\textcite{mccarthyMonetaryPolicyTransmission2002}, for instance, evaluate the responsiveness of residential investment to interest rates considering these changes in the housing financing system.
+In order to isolate these effects, they estimate  a GMM model for the US in two sub-samples (1975-1985 and 1986-2000).
+They conclude that the residential investment response magnitude to a monetary shock before and after these institutional breaks are similar.
 \textcite{gauger_residential_2003} also evaluate the consequences of deregulation of depository institutions throughout the 1980s.
 In order to do so, they estimate a VECM between monetary aggregates (M2), GDP, residential investment and alternate between short-term government bonds and long-term mortgage interest rates.
-They report an increasing contribution of long-term mortgages interest rate over resident investment variance after those institutional changes mentioned above.
+They report an increasing contribution of long-term mortgages interest rate in order to explain resident investment variance after those institutional changes mentioned above.
 
 
-Table \ref{tab:summary_model} presents an overview of the discussed topics and its main conclusions.
+Table \ref{tab:summary_models} presents an overview of the discussed topics and its main conclusions.
 From this brief review of the literature, we conclude that may be the only consensus about the determinants of residential investment is on house prices (nominal or deflated by consumer price index) and some rate of interest (mortgage or long term, as proxy)\footnote{For a broader review of econometric literature, see \textcite{egebo_1990_MODEL}.}.
 Some authors deflate the rate of interest by the CPI, others use nominal interest rate to capture the effect of monetary illusion.
 In the next section, we will present a particular way of combining house prices and mortgage rate of interest in a single index that we will use on our econometric estimation.
@@ -208,10 +210,10 @@ In the next section, we will present a particular way of combining house prices 
 \input{tabs/EmpiricalMotivation}
 
 \section{Macroeconometric analysis}
-\label{sec:org9f87bd5}
+\label{sec:org30435d8}
 \label{sec:VECM}
 \subsection{Houses' own interest rate and residential investment growth rate in the US	Economy}
-\label{sec:org183e022}
+\label{sec:org0001999}
 \label{sc:own}
 
 
@@ -288,7 +290,7 @@ As a consequence, real estate finance has increased considerably in the followin
 \input{./tabs/hypothesis.tex}
 
 \subsection{Data and estimation strategy}
-\label{sec:org9162229}
+\label{sec:org338485e}
 \label{sec:estimation}
 
 
@@ -369,7 +371,7 @@ On the following subsection, we analyze the results and compare with the theoret
 
 
 \subsection{Estimation results}
-\label{sec:org55c0725}
+\label{sec:org27e2f87}
 \label{sec:results}
 
 According to parameters presented in Table \ref{Estimacao}, we find statistically significant co-integration  coefficients for both equations. 
@@ -414,7 +416,7 @@ In short, our results shows that an increase in mortgage interest rate (equivale
 \end{figure}
 
 \subsection{Comparison with previous studies}
-\label{sec:orgf502b0a}
+\label{sec:org2c42db2}
 
 In this section,  we contrast our findings with those obtained by the literature.
 At this stage, we restrict the comparison with  \textcite{gauger_residential_2003} and \textcite{arestis_residential_2015} since we share the same topic.
@@ -427,7 +429,7 @@ Thus, we conclude that our estimation depicts residential investment growth rate
 On the following section we present some concluding remarks.
 
 \section{Concluding Remarks}
-\label{sec:org3d696b6}
+\label{sec:org8b8c96f}
 \label{sec:Conclusion}
 In this article, we present a residential investment growth rate specification compatible with the Srrafian supermultiplier model.
 To do so, we estimate a bi-dimension VEC evaluate \textcite{teixeira_crescimento_2015}
@@ -454,22 +456,22 @@ Thus, our  proposal differs from the usual empirical literature by:
 
 
 \section*{Acknowledgments}
-\label{sec:org0ca90a3}
+\label{sec:org89aa499}
 \noindent The authors wish to acknowledge the financial support from the Brazilian National Research Council (CNPq; grant 130777/2018-8). We are grateful to Rosângela Ballini, Carolina Baltar, Júlia Braga, Ítalo Pedrosa, Cecon/Unicamp and UFRJ Macroeconomic discussion groups for useful comments and suggestions on earlier drafts of this article. All remaining errors are, of course, our own.
 
 
 \section*{Disclosure statement}
-\label{sec:org4373a36}
+\label{sec:orgd91fcca}
 No potential conflict of interest was reported by the authors.
 
 \section*{References}
-\label{sec:org6a4a0f7}
+\label{sec:orge69e504}
 \printbibliography[heading=none]
 
 
 \appendix
 \section{Statistical Appendix}
-\label{sec:orgaa61a4d}
+\label{sec:org2aa60ea}
 \label{appen:A}
 
 In this appendix we report several tests: unit root tests on our variables of interest, Structural break test, Johansen procedure and hypothesis tests on residuals. 
